--- a/style/style.css
+++ b/style/style.css
@@ -106,6 +106,34 @@ select {
 	color: #834583;
 }
 
+.step-4 b, span.step-4 {
+	color: #e57d24;
+}
+
+.step-5 b, span.step-5 {
+	color: #24ad5f;
+}
+
+.instructions.step-1 .conBorder {
+	border-color: #3b97d3;
+}
+
+.instructions.step-2 .conBorder {
+	border-color: #e64c3b;
+}
+
+.instructions.step-3 .conBorder {
+	border-color: #834583;
+}
+
+.instructions.step-4 .conBorder {
+	border-color: #e57d24;
+}
+
+.instructions.step-5 .conBorder {
+	border-color: #24ad5f;
+}
+
 .conBorder {
 	display: inline-block;
 	border: 4px solid transparent;
@@ -122,18 +150,6 @@ select {
 	max-width: 100%
 }
 
-.instructions.step-1 .conBorder {
-	border-color: #3b97d3;
-}
-
-.instructions.step-2 .conBorder {
-	border-color: #e64c3b;
-}
-
-.instructions.step-3 .conBorder {
-	border-color: #834583;
-}
-
 .vert {
 	overflow: hidden;
 }
@@ -142,6 +158,7 @@ select {
 	padding: 10px;
 	text-align: center;
 	color: white;
+	height: 38px;
 }
 
 .modal {
@@ -155,11 +172,11 @@ select {
 
 .modal .devices div {
 	padding: 0;
-	height: 123px;
+	height: 114px;
 }
 
 .devices img {
-	max-height: 123px;
+	max-height: 114px;
 	height: auto;
 	width: auto;
 	max-width: 100%
